docs/en/3.6.1/cordova/plugins/pluginapis.md
---
license: Licensed to the Apache Software Foundation (ASF) under one
         or more contributor license agreements.  See the NOTICE file
         distributed with this work for additional information
         regarding copyright ownership.  The ASF licenses this file
         to you under the Apache License, Version 2.0 (the
         "License"); you may not use this file except in compliance
         with the License.  You may obtain a copy of the License at

           http://www.apache.org/licenses/LICENSE-2.0

         Unless required by applicable law or agreed to in writing,
         software distributed under the License is distributed on an
         "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
         KIND, either express or implied.  See the License for the
         specific language governing permissions and limitations
         under the License.
---

# Plugin APIs

Cordova ships with a minimal set of APIs, and projects add what extra APIs they require through plugins.

You can search through all existing plugins (including third-party plugins) using the [Plugin Registry](http://plugins.cordova.io/).

The traditional set of core Cordova plugins are as follows:

- [Battery Status](http://plugins.cordova.io/#/package/org.apache.cordova.battery-status)
> Monitor the status of the device's battery.

- [Camera](http://plugins.cordova.io/#/package/org.apache.cordova.camera)
> Capture a photo using the device's camera.

- [Console](http://plugins.cordova.io/#/package/org.apache.cordova.console)
> Add additional capability to console.log().

- [Contacts](http://plugins.cordova.io/#/package/org.apache.cordova.contacts)
> Work with the devices contact database.

- [Device](http://plugins.cordova.io/#/package/org.apache.cordova.device)
> Gather device specific information.

- [Device Motion (Accelerometer)](http://plugins.cordova.io/#/package/org.apache.cordova.device-motion)
> Tap into the device's motion sensor.

- [Device Orientation (Compass)](http://plugins.cordova.io/#/package/org.apache.cordova.device-orientation)
> Obtain the direction that the device is pointing.

- [Dialogs](http://plugins.cordova.io/#/package/org.apache.cordova.dialogs)
> Visual device notifications.

- [FileSystem](http://plugins.cordova.io/#/package/org.apache.cordova.file)
> Hook into native file system through JavaScript.

- [File Transfer](http://plugins.cordova.io/#/package/org.apache.cordova.file-transfer)
> Hook into native file system through JavaScript.

- [Geolocation](http://plugins.cordova.io/#/package/org.apache.cordova.geolocation)
> Make your application location aware.

- [Globalization](http://plugins.cordova.io/#/package/org.apache.cordova.globalization)
> Enable representation of objects specific to a locale.

- [InAppBrowser](http://plugins.cordova.io/#/package/org.apache.cordova.inappbrowser)
> Launch URLs in another in-app browser instance.

- [Media](http://plugins.cordova.io/#/package/org.apache.cordova.media)
> Record and play back audio files.

- [Media Capture](http://plugins.cordova.io/#/package/org.apache.cordova.media-capture)
> Capture media files using device's media capture applications.

- [Network Information (Connection)](http://plugins.cordova.io/#/package/org.apache.cordova.network-information)
> Quickly check the network state, and cellular network information.

- [Splashscreen](http://plugins.cordova.io/#/package/org.apache.cordova.splashscreen)
> Show and hide the applications splash screen.

- [Vibration](http://plugins.cordova.io/#/package/org.apache.cordova.vibration)
> An API to vibrate the device.

- [StatusBar](https://github.com/apache/cordova-plugin-statusbar/blob/master/doc/index.md)
> An API for showing, hiding and configuring status bar background.

Non-English translations of these plugin docs can be found by looking at older versions of the Cordova documentation.
Use the drop-down menu at the very top-right of this site to switch versions.

